update some files